fix firefox image opacity flicker issue again

--- a/assets/css/less/front-page.less
+++ b/assets/css/less/front-page.less
@@ -120,6 +120,7 @@
 		flex-flow: column nowrap;
 
 		& img {
+			background-color: @eddgray;
 			opacity: 1;
 			-webkit-transition: all .3s ease-in-out;
 			-moz-transition: all .3s ease-in-out;
@@ -209,12 +210,13 @@
 				display: block;
 
 				& img {
+					background-color: #fff;
 					vertical-align: top;
-					-webkit-transition: all .3s ease-in-out;
-					-moz-transition: all .3s ease-in-out;
-					-o-transition: all .3s ease-in-out;
-					-ms-transition: all .3s ease-in-out;
-					transition: all .3s ease-in-out;
+					-webkit-transition: opacity .3s ease-in-out;
+					-moz-transition: opacity .3s ease-in-out;
+					-o-transition: opacity .3s ease-in-out;
+					-ms-transition: opacity .3s ease-in-out;
+					transition: opacity .3s ease-in-out;
 				}
 
 				&:hover img {
